test_translator/tests/data/checkpoint_2/core/pass/70_isclose_basic/solution.js
export function approx() {
    return 3.145;  // Within 0.01 of 3.14
}
